Hive storage: updated hive-storage scripts to work with current Redshift-format flatfile (#290)
Infobright: removed folder 4-storage/infobright as not currently supported (#285)
Postgres: add Postgres table definition in atomic schema (#160)

StorageLoader: bumped to 0.1.0
StorageLoader: bumped Sluice 0.0.7 (#300)
StorageLoader: removed code to delete Hive ETL's empty event files (#306)
StorageLoader: fixed bug where download path has to be set (even when using Redshift) (#280) - TODO
StorageLoader: added max_error and treat_empty_as_null as StorageLoader configuration values for Redshift (#273) - TODO
StorageLoader: tweaked ANALYZE and VACUUM commands (#283) - TODO
StorageLoader: added run= to front of folder names in events-archive folder (#293) - TODO
StorageLoader: added support for loading Postgres (#161) - TODO
StorageLoader: removed Infobright loading capability (#307) - TODO

Version 0.8.7 (2013-07-07)
--------------------------
JS tracker: bumped to 0.12.0
JS tracker: fixed document reference to use documentAlias (#247)
JS tracker: fixed bug with setCustomUrl (#267)
JS tracker: changed ev_ to se_ for structured events (#197)
JS tracker: fixed Firefox failure when "Always ask" set for cookies (#163)
JS tracker: fixed bug in page ping functionality detected in IE 8 (#260)
JS tracker: replaced forEach as not supported in IE 6-8 (#295)
EmrEtlRunner: fixed bug in config.yml.sample (#291)
Arduino tracker: added git submodule link (#292)

Version 0.8.6 (2013-06-03)
--------------------------
Hadoop ETL: bumped to 0.3.2
Hadoop ETL: bumped Scalding to 0.8.5
Hadoop ETL: bumped Scala version to 2.10.0
Hadoop ETL: bumped scala-maxmind-geoip to 0.0.5 to work with Scala 2.10.0
Hadoop ETL: bumped SBT from 0.12.1 to 0.12.3
Hadoop ETL: bumped Specs2 to 1.14
Hadoop ETL: replaced Bytes in CanonicalOutput with JBytes (#254)
Hadoop ETL: disabled "corruption" detection in ETL overriding custom URLs with longer collector referer URLs (#268)
EmrEtlRunner: bumped to 0.3.0