@@ -16,10 +16,12 @@ Postgres: add Postgres table definition in atomic schema (#160)
 StorageLoader: bumped to 0.1.0
 StorageLoader: bumped Sluice 0.0.7 (#300)
 StorageLoader: removed code to delete Hive ETL's empty event files (#306)
+
+StorageLoader: added run= to front of folder names in events-archive folder (#293) - TODO
 StorageLoader: fixed bug where download path has to be set (even when using Redshift) (#280) - TODO
 StorageLoader: added max_error and treat_empty_as_null as StorageLoader configuration values for Redshift (#273) - TODO
 StorageLoader: tweaked ANALYZE and VACUUM commands (#283) - TODO
-StorageLoader: added run= to front of folder names in events-archive folder (#293) - TODO
+
 StorageLoader: added support for loading Postgres (#161) - TODO
 StorageLoader: removed Infobright loading capability (#307) - TODO
 
